Dashboard page added for we connect template (#1089)

--- a/application/clients/desktop/src/assets/templates/weconnect-template/index.html
+++ b/application/clients/desktop/src/assets/templates/weconnect-template/index.html
@@ -85,9 +85,9 @@
                     <div data-gjs="navbar-items" class="menu-container">
                         <nav data-gjs="navs" id="iytvlb" class="menu">
                             <button type="button" id="igcgdj" class="btn btn-primary">Home</button>
-                            <a href="##" id="in9cbu" class="menu-link">Product</a>
-                            <a href="##" id="iltthu" class="menu-link">Company</a>
-                            <a href="##" id="ibvjt6" class="menu-link">Resources</a>
+                            <a href="./pages/dashboard.html" id="in9cbu" class="menu-link">Dashboard</a>
+                            <!-- <a href="##" id="iltthu" class="menu-link">Company</a>
+                            <a href="##" id="ibvjt6" class="menu-link">Resources</a> -->
                             <a href="./pages/about.html" id="ibczog" class="menu-link">About Us</a>
                         </nav>
                     </div>
