--- a/application/clients/desktop/src/assets/templates/weconnect-template/pages/about.html
+++ b/application/clients/desktop/src/assets/templates/weconnect-template/pages/about.html
@@ -95,9 +95,9 @@
                     <div data-gjs="navbar-items" class="menu-container">
                         <nav data-gjs="navs" id="iytvlb" class="menu">
                             <a href="../index.html" id="ibczog" class="menu-link">Home</a>
-                            <a href="##" id="in9cbu" class="menu-link">Product</a>
-                            <a href="##" id="iltthu" class="menu-link">Company</a>
-                            <a href="##" id="ibvjt6" class="menu-link">Resources</a>
+                            <a href="./dashboard.html" id="in9cbu" class="menu-link">Dashboard</a>
+                            <!-- <a href="##" id="iltthu" class="menu-link">Company</a>
+                            <a href="##" id="ibvjt6" class="menu-link">Resources</a> -->
                             <button type="button" id="igcgdj" class="btn btn-primary">About Us</button>
                         </nav>
                     </div>
