--- a/generator/services/Angular-Template-managerV10/templates/ComponentTs.handlebars
+++ b/generator/services/Angular-Template-managerV10/templates/ComponentTs.handlebars
@@ -15,6 +15,7 @@ import * as {{importName}} from '{{ importPath }}';
 })
 
 export class {{ GpOptions.className }} implements OnInit {
+    private jwtToken: String;
 {{#if GpOptions.variables}}
 {{#each GpOptions.variables}}
     {{name}}: {{dataType}}{{#ifCond value '!=' null}} = {{ value }}{{/ifCond}};
@@ -28,6 +29,10 @@ export class {{ GpOptions.className }} implements OnInit {
 {{#if GpOptions.entities}}
 {{#each GpOptions.entities}}
     public {{ name }} = {
+        created_date: '',
+        created_by: '',
+        last_modified_by: '',
+        last_modified_date: '',
     {{#each field}}
         {{ name }}: '',
     {{/each}}
@@ -46,6 +51,13 @@ export class {{ GpOptions.className }} implements OnInit {
     ) { }
 
     ngOnInit() {
+        this.jwtToken = sessionStorage.getItem('email')
+        {{#if GpOptions.entities}}
+        {{#each GpOptions.entities}}
+        {{ name }}.created_by = sessionStorage.getItem('email'); 
+        
+        {{/each}}
+    {{/if}}
     {{#if GpCodeToAdd.lifecycle_info}}
     {{#each GpCodeToAdd.lifecycle_info }}
         {{{data}}}
