--- a/generator/services/seed/admin/admin.component.html
+++ b/generator/services/seed/admin/admin.component.html
@@ -1,10 +1,16 @@
 <div class="dashboardcard">
-  <div class="card">
-    <div class="card-header">
-      {{'source.dashboard' | i18next}}
-    </div>
-    <div class="card-body">
-      <a routerLink="/usermanagement" class="btn btn-primary">{{'source.userManagement' | i18next}}</a>
+  <h2><label>Admin DashBoard</label></h2>
+  <div class="accordion indicator-plus-before round-indicator" id="accordionH" aria-multiselectable="true">
+    <div class="card m-b-0">
+      <div class="card-header collapsed" role="tab" id="headingOneH" href="#userManagement" data-toggle="collapse"
+        data-parent="#accordionH" aria-expanded="false" aria-controls="collapseOneH">
+        <a class="card-title">{{'source.userManagement' | i18next}}</a>
+      </div>
+      <div class="collapse" id="userManagement" role="tabpanel" aria-labelledby="headingOneH">
+        <div class="card-body">
+          <a routerLink="/usermanagement" class="btn btn-primary">{{'source.userManagement' | i18next}}</a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
