UX modifications for bootstrap table

--- a/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/bootstrap-type.handlebars
+++ b/generator/services/Angular-gen-ManagerV10/src/strategy/HTML/template/bootstrap-type.handlebars
@@ -1,5 +1,5 @@
-<div name={{component_name}}>
-    <table id="table" class="table table-bordered  table-striped"
+<div name={{component_name}} class = "">
+    <table id="table" class="table table-bordered  table-striped table-curved"
         data-show-header="true"
         data-pagination="true" data-id-field="name">
         <thead class="table table-hover">
