--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -345,9 +345,10 @@
                   </div>
                   <div class="form-group">
                     <label>Upload Collection File :</label>
-                    <input type="text" formControlName="endPoint" class="form-control" placeholder="Enter EndPoint URL"
+                    <input type="file" formControlName="endPoint" class="form-control" placeholder="Enter EndPoint URL" id="file" (change)='selectFile($event)'
                       [(ngModel)]="quickConnectors.endPointUrl" name="endPoint"
                       [ngClass]="{ 'is-invalid': submitted && f.endPoint.errors }" />
+                      <button type = "button" id="fileupload" (click)="uploadFile()">Send</button>
                     <div *ngIf="submitted && f.endPoint.errors" class="invalid-feedback">
                       <div *ngIf="f.endPoint.errors.required">File is required</div>
                     </div>
