architecture template code completed design changing

--- a/application/clients/desktop/src/assets/templates/geppetto-template/index.html
+++ b/application/clients/desktop/src/assets/templates/geppetto-template/index.html
@@ -24,7 +24,8 @@
         id="template-i0xxw" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" id="template-itbbj"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" id="template-iu8eq"></script>
-    <script id="template-i29cx">      function openNav() {
+    <script id="template-i29cx">      
+        function openNav() {
             document.getElementById("mySidenav").style.width = "18%";
         }
         function closeNav() {
