complete architecture template

--- a/application/clients/desktop/src/assets/templates/architecture-template/index.html
+++ b/application/clients/desktop/src/assets/templates/architecture-template/index.html
@@ -119,7 +119,10 @@
                     <div id="mySidenav" class="sidenav">
                         <a [routerLink]="['javascript:void(0)']" onclick="closeNav()" id="template-if7ki"
                             class="closebtn">
-                            <i class="fa fa-close size-30" aria-hidden="true"></i></a>
+                            <div id="ibuiwl" class="cell gpd-clm"><img id="imvflv"
+                                src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/cdca723990474ba9ba33337d35ef399d_close.png" />
+                            </div>
+                        </a>
                         <div id="MainMenu" class="">
 
                         </div>
