Added code for get conectors details in generator side

--- a/generator/services/seed/admin/admin.component.html
+++ b/generator/services/seed/admin/admin.component.html
@@ -17,10 +17,7 @@
       </div>
       <div class="collapse" id="system_creds_admin-gjs" role="tabpanel" aria-labelledby="headingThreeH">
         <div class="card-body">
-          <button type="button" class="btn" (click)="route3()">Vault Administration</button>&nbsp;&nbsp;
-        </div>
-        <div class="card-body">
-          <button type="button" class="btn" (click)="route3()">DB Administration</button>&nbsp;&nbsp;
+          <a type="button" class="btn btn-primary" routerLink="/vaultadmin">Vault Administration</a>&nbsp;&nbsp;
         </div>
       </div>
     </div>
