--- a/application/clients/desktop/src/assets/templates/architecture-template/index.html
+++ b/application/clients/desktop/src/assets/templates/architecture-template/index.html
@@ -71,11 +71,12 @@
             // document.getElementById("mySidenav").style.width = "18%";
             document.getElementById("mySidenav").style.width = "250px";
             document.getElementById("main").style.marginLeft = "250px";
+            document.getElementbuId("mySidenav").style.display = "none";
             document.getElementById("mySidenav").style.backgroundColor = "#1E1E1E";
         }
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
+            document.getElementById("main").style.marginLeft = "0%";
         }
     </script>
 
@@ -245,11 +246,11 @@
             </div>
         </div>
     </header>
-    <div id="izez1" class="gpd-container gpd-cnt">
-        <div id="ik7dx" class="gdp-row gpd-grid">
+    <!-- <div id="izez1" class="gpd-container gpd-cnt">
+        <div id="ik7dx" class="gdp-row gpd-grid"> -->
             <div id="main" style="transition: margin-left .5s">
-                <section id="idtd" class="gpd-section">
 
+                <section id="idtd" class="gpd-section">
                     <div id="inqj" class="gpd-container gpd-cnt">
                         <div id="ipaakl" class="gdp-row gpd-grid">
                             <div id="iyzhsl" class="cell gpd-clm">
@@ -487,8 +488,8 @@
                     </section>
                 </footer>
             </div>
-        </div>
-    </div>
+        <!-- </div>
+    </div> -->
     <script>var items = document.querySelectorAll('#i3dv0k');
         for (var i = 0, len = items.length; i < len; i++) {
             (function () { var t, e = 0, n = function () { var t, e = document.createElement("void"), n = { transition: "transitionend", OTransition: "oTransitionEnd", MozTransition: "transitionend", WebkitTransition: "webkitTransitionEnd" }; for (t in n) if (void 0 !== e.style[t]) return n[t] }(), r = function (t) { e = 1; var n = function (t) { var e = window.getComputedStyle(t), n = e.display, r = (e.position, e.visibility, e.height, parseInt(e["max-height"])); if ("none" !== n && "0" !== r) return t.offsetHeight; t.style.height = "auto", t.style.display = "block", t.style.position = "absolute", t.style.visibility = "hidden"; var i = t.offsetHeight; return t.style.height = "", t.style.display = "", t.style.position = "", t.style.visibility = "", i }(t), r = t.style; r.display = "block", r.transition = "max-height 0.25s ease-in-out", r.overflowY = "hidden", "" == r["max-height"] && (r["max-height"] = 0), 0 == parseInt(r["max-height"]) ? (r["max-height"] = "0", setTimeout(function () { r["max-height"] = n + "px" }, 10)) : r["max-height"] = "0" }; "gjs-collapse" in this || this.addEventListener("click", function (i) { if (i.preventDefault(), !e) { var o = this.closest("[data-gjs=navbar]").querySelector("[data-gjs=navbar-items]"); r(o), t || (o.addEventListener(n, function () { e = 0; var t = o.style; 0 == parseInt(t["max-height"]) && (t.display = "", t["max-height"] = "") }), t = 1) } }), this["gjs-collapse"] = 1 }.bind(items[i]))();
