--- a/application/clients/desktopV2/src/app/homepage/homepage.component.html
+++ b/application/clients/desktopV2/src/app/homepage/homepage.component.html
@@ -8,7 +8,10 @@
                     <div id="iw4wh" class="cell gpd-clm">
                         <div id="i7lpe" class="gpd-text">{{'HOME.HEADING1' | translate}}<br>​​​​​​​{{'HOME.HEADING2' | translate}}</div>
                     </div>
-                    <div id="ishz7" class="cell gpd-clm"><button type="button" id="i55xt" class="btn btn-primary">{{'HOME.SIGNUP' | translate}}</button><button type="button" id="iba96" class="btn btn-primary">{{'HOME.LOGIN' | translate}}</button></div>
+                    <div id="ishz7" class="cell gpd-clm">
+                        <button type="button" id="i55xt" class="btn btn-primary">{{'HOME.SIGNUP' | translate}}</button>
+                        <button type="button" id="iba96" routerLink="/login" class="btn btn-primary">{{'HOME.LOGIN' | translate}}</button>
+                    </div>
                 </div>
             </div>
             <div id="imysg" class="cell gpd-clm">
