--- a/application/clients/desktopV2/src/app/login/login.component.html
+++ b/application/clients/desktopV2/src/app/login/login.component.html
@@ -8,17 +8,15 @@
                 </div>
             </div>
             <div id="izo03" class="cell gpd-clm">
-                <div class="gdp-row gpd-grid" id="ili0n">
-                    <div class="cell gpd-clm">
-                        <h1 class="gpd-header" id="i39ya">Log in to Geppetto</h1>
-                        <div class="gpd-text" id="i7pe3">Welcome back! Login with your data that you entered<br>during registration
+                <div id="ili0n" class="gdp-row gpd-grid">
+                    <div id="iz7p3" class="cell gpd-clm">
+                        <h1 id="i39ya" class="gpd-header">Log in to Geppetto</h1>
+                        <div id="i7pe3" class="gpd-text">Welcome back! Login with your data that you entered during registration
                         </div>
                     </div>
-                    <div class="cell gpd-clm" id="ixc5n"><input type="text" placeholder="Username" class="form-control" id="iiiok" /><input type="text" placeholder="Password" class="form-control" id="i5v47" />
-                    </div>
-                    <div class="cell gpd-clm" id="ix20h"><button type="button" class="btn btn-primary" id="iaoq5">Login</button>
-                        <p id="i7ijz">Don't have an account? &nbsp;<span style="color:#2ecc71;"><u>Register</u></span>
-                        </p>
+                    <div id="ixc5n" class="cell gpd-clm"><input type="text" placeholder="Username" id="iiiok" class="form-control" /><input type="text" placeholder="Password" id="i5v47" class="form-control" /></div>
+                    <div id="ix20h" class="cell gpd-clm"><button type="button" id="iaoq5" class="btn btn-primary">Login</button>
+                        <p id="i7ijz">Don't have an account? &nbsp;<span style="color:#2ecc71;"><u>Register</u></span></p>
                     </div>
                 </div>
             </div>
