--- a/application/clients/desktopV2/src/app/header/header.component.html
+++ b/application/clients/desktopV2/src/app/header/header.component.html
@@ -1,28 +1,21 @@
-<header id="izil" class="header1">
-    <div id="i575rl" class="container">
-        <div data-columns="1" data-gjs="navbar" id="iyp1im" class="row no-gutters">
-            <div data-column="1" id="inpxw9" class="cell">
-                <img id="i11uk-2" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/648ae51765794176a2eb5f551b532533_gwp_white_logo.png" />
-                <div id="i088e" class="burger">
-                    <div class="burger-line-dark">
-                    </div>
-                    <div class="burger-line-dark">
-                    </div>
-                    <div class="burger-line-dark">
-                    </div>
-                </div>
-            </div>
-            <div data-column="1" id="i8smfs" class="cell">
-                <div id="i1t03" class="gdp-row gpd-grid">
-                    <div id="i8r2e" class="cell gpd-clm">
-                        <select #langselect (change)="onChange(langselect.value)" class="btn btn-primary" id="">
-                            <option *ngFor="let lang of display_langs"   [value]="lang">{{ lang  }}</option>
-                          </select>
-                    </div>
-                    <div id="i4r7l-2" class="cell gpd-clm"><input type="text" placeholder="{{ 'HOME.ABOUT' | translate}}" id="idvlo-2" class="form-control" /></div>
-                    <div class="cell gpd-clm" id="imllt"><button type="button" class="btn btn-primary" id="iwghy">{{'HOME.ABOUT' | translate}}</button></div>
-                </div>
+<nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img id="header_logo" src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/648ae51765794176a2eb5f551b532533_gwp_white_logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            </ul>
+            <div id="i1t03" class="gdp-row gpd-grid">
+                <select #langselect (change)="onChange(langselect.value)" class="btn btn-primary me-2" id="">
+                    <option *ngFor="let lang of display_langs"   [value]="lang">{{ lang  }}</option>
+                  </select>
+                <div id="i4r7l-2" class="cell gpd-clm"><input type="text" placeholder="{{'HOME.SEARCH_FOR' | translate}}" id="idvlo-2" class="form-control"></div>
+                <div class="cell gpd-clm" id="imllt"><button type="button" class="btn btn-primary" id="iwghy">{{'HOME.ABOUT' | translate}}</button></div>
             </div>
         </div>
     </div>
-</header>
+</nav>
