--- a/application/clients/desktopV2/src/app/header/header.component.scss
+++ b/application/clients/desktopV2/src/app/header/header.component.scss
@@ -30,53 +30,8 @@
     padding: 10px 0 10px 0;
 }
 
-.nav-items {
-    display: inline-block;
-    float: right;
-}
-
-.navbar {
-    background-color: #222;
-    color: #ddd;
-    min-height: 50px;
-    width: 100%
-}
-
-.navbar-container {
-    max-width: 950px;
-    margin: 0 auto;
-    width: 95%
-}
-
-.navbar-container:after {
-    content: "";
-    clear: both;
-    display: block
-}
-
-.navbar-brand {
-    vertical-align: top;
-    display: inline-block;
-    padding: 5px;
-    min-height: 50px;
-    min-width: 50px;
-    color: inherit;
-    text-decoration: none
-}
-
-.navbar-items {
-    padding: 10px 0;
-    display: block;
-    float: right;
-    margin: 0
-}
-
-.navbar-item {
-    margin: 0;
-    color: inherit;
-    text-decoration: none;
-    display: inline-block;
-    padding: 10px 15px
+#header_logo {
+    width: 300px;
 }
 
 #inpxw9 {
@@ -227,16 +182,10 @@ img {
     display: inline-block
 }
 
-// b,
-// i,
-// img,
-// label,
-// small,
-// span,
-// u {
-//     display: inline-block
-// }
 @media (max-width:768px) {
+    #header_logo {
+        width: 100px;
+    }
     .gdp-row,
     .row {
         flex-wrap: wrap
@@ -247,12 +196,6 @@ img {
     .nav-items {
         display: none;
         width: 100%
-    }
-    .navbar-items {
-        width: 100%
-    }
-    .navbar-item {
-        display: block
     }
     #inpxw9 {
         height: 100%;
