--- a/application/clients/desktopV2/src/app/login/login.component.html
+++ b/application/clients/desktopV2/src/app/login/login.component.html
@@ -10,13 +10,13 @@
             <div id="izo03" class="cell gpd-clm">
                 <div id="ili0n" class="gdp-row gpd-grid">
                     <div id="iz7p3" class="cell gpd-clm">
-                        <h1 id="i39ya" class="gpd-header">Log in to Geppetto</h1>
-                        <div id="i7pe3" class="gpd-text">Welcome back! Login with your data that you entered during registration
+                        <h1 id="i39ya" class="gpd-header">{{'LOGIN.HEADER' | translate}}</h1>
+                        <div id="i7pe3" class="gpd-text">{{'LOGIN.DESCRIPTION' | translate}}
                         </div>
                     </div>
-                    <div id="ixc5n" class="cell gpd-clm"><input type="text" placeholder="Username" id="iiiok" class="form-control" /><input type="text" placeholder="Password" id="i5v47" class="form-control" /></div>
-                    <div id="ix20h" class="cell gpd-clm"><button type="button" id="iaoq5" class="btn btn-primary">Login</button>
-                        <p id="i7ijz">Don't have an account? &nbsp;<span style="color:#2ecc71;"><u>Register</u></span></p>
+                    <div id="ixc5n" class="cell gpd-clm"><input type="text" placeholder="{{'LOGIN.INPUT1' | translate}}" id="iiiok" class="form-control" /><input type="text" placeholder="{{'LOGIN.INPUT2' | translate}}" id="i5v47" class="form-control" /></div>
+                    <div id="ix20h" class="cell gpd-clm"><button type="button" id="iaoq5" class="btn btn-primary">{{'LOGIN.BUTTON_TXT' | translate}}</button>
+                        <p id="i7ijz">{{'LOGIN.ACCOUNT' | translate}} &nbsp;<span style="color:#2ecc71;"><u>{{'LOGIN.SIGNUP' | translate}}</u></span></p>
                     </div>
                 </div>
             </div>
